<resources>
    <string name="app_name">Nmedia</string>
    <string name="title">NMedia!</string>
    <string name="author_avatar">Author avatar</string>
    <string name="more_button">More button</string>
    <string name="favorite_counter">Favorite counter</string>
    <string name="shares_counter">Shares counter</string>
    <string name="reads_counter">Reads counter</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="message">Message</string>
    <string name="edit_message">Edit Message</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_options">Options</string>
    <string name="post_saved">Post saved successfully</string>
    <string name="video">Video</string>
    <string name="select_application">Choose application</string>
</resources>